Finalize Exercise 02 submission package